# llamafile

./: .gitignore  .gitmodules  Makefile  README.md  README_0.10.0.md  RELEASE.md  cosmocc-override.cmake  mkdocs.yml
.github/workflows/: ci.yml  update-llama-cpp.yml
.llamafile_plugin/.claude-plugin/: plugin.json  (+1 more)
docs/: AGENTS.md  creating_llamafiles.md  source_installation.md
llama.cpp.patches/: README.md  apply-patches.sh
llamafile/: BUILD.mk  args.cpp  args.h  build-functions.sh  chatbot.h  chatbot_api.cpp  chatbot_backend.h  chatbot_cli.cpp  chatbot_comm.cpp  chatbot_direct.cpp  chatbot_eval.cpp  chatbot_file.cpp  chatbot_hist.cpp  chatbot_logo.cpp  chatbot_main.cpp  chatbot_repl.cpp  check_cpu.c  compute.cpp  cuda.bat  cuda.c  cuda.sh  cuda_parallel.bat  extract_data_uris.cpp  iqk_mul_mat.inc  llamafile.c  llamafile.h  main.cpp  metal.c  rocm.bat  rocm.sh  rocm_parallel.bat  sgemm.cpp  sgemm.h  tinyblas-compat.h  tinyblas_cpu.h  tinyblas_cpu_mixmul.inc  tinyblas_cpu_unsupported.cpp  version.h  vulkan.bat  vulkan.c
tests/: BUILD.mk  extract_data_uris_test.cpp
tests/integration/: README.md  conftest.py  pyproject.toml  run_tests.sh
tests/integration/tests/: test_cli.py  test_combined.py  test_gpu.py  test_multimodal.py  test_server.py  test_tool_calling.py  test_tui.py
tests/integration/utils/: llamafile.py
tools/: check_patches.sh  generate_patches.sh
whisper.cpp.patches/: apply-patches.sh
whisperfile/: BUILD.mk  color.h  mic2raw.cpp  mic2txt.cpp  slurp.cpp  slurp.h  stream.cpp  whisper-server.1  whisper-server.cpp  whisperfile.1  whisperfile.cpp
(+44 files in other folders)
